// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message 1`] = `
<article
  className="message"
>
  <div
    className="message-header"
  >
    Header
  </div>
  <div
    className="message-body"
  >
    Content
  </div>
</article>
`;

exports[`Message 2`] = `
<article
  className="message is-small is-primary"
>
  <div
    className="message-header"
  >
    Header
  </div>
  <div
    className="message-body"
  >
    Content
  </div>
</article>
`;
